Fix sticky navigation z-index
- Sticky navigation needs to be on top of other elements

--- a/src/styles/elements/c-navigation.scss
+++ b/src/styles/elements/c-navigation.scss
@@ -30,6 +30,7 @@
   font-weight: bold;
   text-transform: uppercase;
   background-color: #fff;
+  z-index: 2000;
 }
 :host([slot=sub]) {
   background-color: #fff;
